@@ -1,49 +1,97 @@
 package com.pri.springboot.controller;
 
-import com.pri.springboot.dto.LoginRequest; // Zorg dat dit DTO bestaat
-import com.pri.springboot.dto.RegisterRequest; // Zorg dat dit DTO bestaat
-import com.pri.springboot.entity.User;
-import com.pri.springboot.repository.UserRepository;
+import com.pri.springboot.dto.LoginRequest;
+import com.pri.springboot.dto.RegisterRequest;
+import com.pri.springboot.dto.UserDto;
+import com.pri.springboot.security.JwtTokenProvider;
+import com.pri.springboot.security.UserPrincipal;
+import com.pri.springboot.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collections;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/auth")
 public class AuthController {
 
-    @Autowired private AuthenticationManager authenticationManager;
-    @Autowired private UserRepository userRepository;
-    @Autowired private PasswordEncoder passwordEncoder;
+    @Autowired 
+    private AuthenticationManager authenticationManager;
+    
+    @Autowired 
+    private UserService userService;
+    
+    @Autowired 
+    private PasswordEncoder passwordEncoder;
+    
+    @Autowired
+    private JwtTokenProvider tokenProvider;
 
     @PostMapping("/register")
     public ResponseEntity<?> registerUser(@RequestBody RegisterRequest registerRequest) {
-        if (userRepository.findByUsername(registerRequest.getUsername()).isPresent()) {
-            return ResponseEntity.badRequest().body(Map.of("error", "Username is al in gebruik!"));
+        if (userService.existsByUsername(registerRequest.getUsername())) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "Username is already taken!"));
         }
-        User user = new User();
-        user.setUsername(registerRequest.getUsername());
-        user.setPassword(passwordEncoder.encode(registerRequest.getPassword()));
-        userRepository.save(user);
-        return ResponseEntity.ok(Map.of("message", "Gebruiker succesvol geregistreerd!"));
+        
+        if (userService.existsByEmail(registerRequest.getEmail())) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "Email is already in use!"));
+        }
+        
+        // Create new user's account
+        userService.createUser(
+            registerRequest.getUsername(),
+            registerRequest.getEmail(),
+            passwordEncoder.encode(registerRequest.getPassword())
+        );
+        
+        return ResponseEntity.ok(Collections.singletonMap("message", "User registered successfully"));
     }
 
     @PostMapping("/login")
     public ResponseEntity<?> authenticateUser(@RequestBody LoginRequest loginRequest) {
-        // Deze code valideert de gebruiker. Als het faalt, gooit het een exception (401)
-        authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword())
+        Authentication authentication = authenticationManager.authenticate(
+            new UsernamePasswordAuthenticationToken(
+                loginRequest.getUsername(),
+                loginRequest.getPassword()
+            )
         );
-        // Als we hier komen, is de login succesvol
-        return ResponseEntity.ok(Map.of("message", "Login succesvol"));
+
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+        
+        // Get the fully loaded user with roles
+        UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
+        UserDto userDto = userService.getCurrentUser(userPrincipal.getUsername());
+        
+        // Generate token after we have the user with roles
+        String jwt = tokenProvider.generateToken(authentication);
+        
+        // Log the roles for debugging
+        System.out.println("User " + userPrincipal.getUsername() + " logged in with roles: " + 
+            userPrincipal.getAuthorities().stream()
+                .map(auth -> auth.getAuthority())
+                .collect(Collectors.toList()));
+        
+        return ResponseEntity.ok(Map.of(
+            "accessToken", jwt,
+            "tokenType", "Bearer",
+            "user", userDto
+        ));
+    }
+    
+    @GetMapping("/me")
+    public ResponseEntity<UserDto> getCurrentUser() {
+        UserPrincipal userPrincipal = (UserPrincipal) SecurityContextHolder.getContext()
+            .getAuthentication().getPrincipal();
+            
+        UserDto userDto = userService.getCurrentUser(userPrincipal.getUsername());
+        return ResponseEntity.ok(userDto);
     }
 }
